fix z-index transitions - [CORE-1224]

--- a/core/evancore.vue.libs/src/components/user-callout/UserCallout.scss
+++ b/core/evancore.vue.libs/src/components/user-callout/UserCallout.scss
@@ -7,13 +7,13 @@
   flex-direction: column;
   background-color: white;
   width: 250px;
-  z-index: 1001;
+  z-index: 999;
   transition: transform 0.3s ease-in-out;
 
   &.active {
     transform: translateY(calc(-100% + 61px));
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    // z-index: 1001;
+    // z-index: 999;
   }
 }
 
